objects/ASI_GiftBox_Request_Header__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Achieved__c</fullName>
        <label>% Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Name__c</fullName>
        <formula>ASI_CRM_Customer__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (VN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipName>Gift_Box_POSM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Remark__c</fullName>
        <label>Delivery Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Area__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_Area__c)</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Region__c</fullName>
        <formula>TEXT(ASI_CRM_Customer__r.ASI_CRM_VN_Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Sub_Type__c</fullName>
        <label>Outlet Sub-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Over_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Time__c</fullName>
        <label>Payment Time</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Pending_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Pending Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Trade_A_P_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade A&amp;P Plan</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Can only select Approved Trade A&amp;P Plan with Balance Amount &gt; 0</errorMessage>
            <filterItems>
                <field>ASI_CRM_Trade_A_P_Plan__c.ASI_CRM_Status__c</field>
                <operation>equals</operation>
                <value>Approved, Closed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Trade_A_P_Plan__c</referenceTo>
        <relationshipLabel>All Payment Requests</relationshipLabel>
        <relationshipName>Gift_Box_POSM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Amount__c</fullName>
        <label>Amount (VND)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Bank_Payee_AC__c</fullName>
        <label>A/C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Bank_Payee_Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Bank_Payee_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Bank_Payee_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Bank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Cash_Payee_Contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Cash_Payee_ID_Passport__c</fullName>
        <label>ID/Passport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Cash_Payee_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Channel__c</fullName>
        <label>Channel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Contract_Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Contract_Ending_Date__c</fullName>
        <label>Ending Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Contract_Start_Date__c</fullName>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Contract_Type__c</fullName>
        <label>Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract (VN)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Can only select the approved MCF record</errorMessage>
            <filterItems>
                <field>ASI_CRM_VN_Contract__c.ASI_CRM_Contract_Status__c</field>
                <operation>equals</operation>
                <value>Approved, Closed, Closed(Terminated), Submit for Termination</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_VN_Contract__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM VN Contract</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_VN_Contract__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM VN Capsule Agreement Contract</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_VN_Contract__c</referenceTo>
        <relationshipLabel>All Payment Requests</relationshipLabel>
        <relationshipName>Gift_Box_POSM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Fiscal_Year__c</fullName>
        <formula>IF(MONTH(ASI_CRM_Order_Date__c ) &gt;= 7 , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_CRM_Order_Date__c )), 2) &amp; RIGHT(TEXT(YEAR(ASI_CRM_Order_Date__c ) + 1), 2) , &quot;FY&quot; &amp; RIGHT(TEXT(YEAR(ASI_CRM_Order_Date__c ) - 1), 2) &amp; RIGHT(TEXT(YEAR(ASI_CRM_Order_Date__c )), 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Image_Level__c</fullName>
        <label>Image Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Outlet_Role__c</fullName>
        <label>Outlet Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Spirit_Volume_Potential__c</fullName>
        <label>Spirit Volume Potential</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Wine_Volume_Potential__c</fullName>
        <label>Wine Volume Potential</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Vol_YTD_Bottle__c</fullName>
        <label>Vol YTD (Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Customer_Name_Text__c</fullName>
        <formula>ASI_GiftBox_Request_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Delivery_Address__c</fullName>
        <label>Address</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Finance_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gift_Box_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY1516</fullName>
                </value>
                <value>
                    <fullName>FY1617</fullName>
                </value>
                <value>
                    <fullName>FY1718</fullName>
                </value>
                <value>
                    <fullName>FY1819</fullName>
                </value>
                <value>
                    <fullName>FY1920</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_HR_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Development</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gift_Box_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Marketing_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Service</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gift_Box_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>ASI_GiftBox_Customer__c</referenceTo>
        <relationshipName>Gift_Box_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Request_LastStatus_Time__c</fullName>
        <label>Last Status Changed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gift_Box_POSM_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Waiting for HR Review</fullName>
                </value>
                <value>
                    <fullName>Waiting for Delivery</fullName>
                </value>
                <value>
                    <fullName>Pending Finance Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Sub_Region__c</fullName>
        <label>Sub-Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Temp - A</fullName>
                </value>
                <value>
                    <fullName>Temp - B</fullName>
                </value>
                <value>
                    <fullName>Temp - C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_GiftBox_Total_Charge_Amount__c</fullName>
        <label>Total Charge Amount</label>
        <summarizedField>ASI_GiftBox_Request_Item__c.ASI_GiftBox_Charge_Amount__c</summarizedField>
        <summaryForeignKey>ASI_GiftBox_Request_Item__c.ASI_GiftBox_Request_Id__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>All Payment Request</label>
    <listViews>
        <fullName>ASI_CRM_VN_All_CS_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Request_Department__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_GiftBox_Status__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_GiftBox_Delivery_Address__c</columns>
        <columns>ASI_CRM_Delivery_Remark__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Request_Header__c.ASI_CRM_VN_CS_Request,ASI_GiftBox_Request_Header__c.ASI_CRM_VN_CS_Request_Read_Only</value>
        </filters>
        <label>All VN CS Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_Capsule_CS_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Request_Department__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_GiftBox_Status__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_GiftBox_Delivery_Address__c</columns>
        <columns>ASI_CRM_Delivery_Remark__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Request_Header__c.ASI_CRM_VN_Capsule_CS_Request,ASI_GiftBox_Request_Header__c.ASI_CRM_VN_Capsule_CS_Request_Read_Only</value>
        </filters>
        <label>All VN Capsule CS Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_Display_Listing_Request</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Request_Department__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_GiftBox_Status__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_GiftBox_Delivery_Address__c</columns>
        <columns>ASI_CRM_Delivery_Remark__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Request_Header__c.ASI_CRM_VN_Display_Listing_Fee_Request</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Request_Header__c.ASI_CRM_VN_Display_Listing_Fee_Request_Read_Only</value>
        </filters>
        <label>All VN Display Listing Request</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_FOC_Request</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Request_Department__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_GiftBox_Status__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_GiftBox_Delivery_Address__c</columns>
        <columns>ASI_CRM_Delivery_Remark__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Request_Header__c.ASI_CRM_VN_FOC_Request,ASI_GiftBox_Request_Header__c.ASI_CRM_VN_FOC_Request_Read_Only</value>
        </filters>
        <label>All VN FOC Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_Giftbox_Requests_VK</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Request_Department__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_GiftBox_Status__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_GiftBox_Delivery_Address__c</columns>
        <columns>ASI_CRM_Delivery_Remark__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Request_Header__c.ASI_GiftBox_VN_Request,ASI_GiftBox_Request_Header__c.ASI_GiftBox_VN_Request_Read_Only</value>
        </filters>
        <label>All VN Giftbox Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_POSM_HR_Review_User</group>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_POSM_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Request_Department__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_GiftBox_Status__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_GiftBox_Delivery_Address__c</columns>
        <columns>ASI_CRM_Delivery_Remark__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Request_Header__c.ASI_CRM_POSM_VN_Request,ASI_GiftBox_Request_Header__c.ASI_CRM_POSM_VN_Request_Read_Only</value>
        </filters>
        <label>All VN POSM Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_POSM_HR_Review_User</group>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_Promotion_Requests</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Request_Department__c</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_GiftBox_Status__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_GiftBox_Delivery_Address__c</columns>
        <columns>ASI_CRM_Delivery_Remark__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GiftBox_Request_Header__c.ASI_CRM_VN_Promotion_Request,ASI_GiftBox_Request_Header__c.ASI_CRM_VN_Promotion_Request_Read_Only</value>
        </filters>
        <label>All VN Promotion Requests</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_GiftBox_Request_Customer__c</columns>
        <columns>ASI_GiftBox_Delivery_Address__c</columns>
        <columns>ASI_GiftBox_Request_Department__c</columns>
        <columns>ASI_GiftBox_Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>GBR-{0000000}</displayFormat>
        <label>Request Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Payment Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_POSM_VN_Request</fullName>
        <active>true</active>
        <label>ASI POSM VN Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_POSM_VN_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI POSM VN Request Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_CS_Request</fullName>
        <active>true</active>
        <label>ASI CRM VN CS Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_CS_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN CS Request Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Capsule_CS_Request</fullName>
        <active>true</active>
        <label>ASI CRM VN Capsule CS Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Capsule_CS_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Capsule CS Request Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Display_Listing_Fee_Request</fullName>
        <active>true</active>
        <label>ASI CRM VN Display Listing Fee Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Display_Listing_Fee_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Display Listing Fee Request Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_FOC_Request</fullName>
        <active>true</active>
        <label>ASI CRM VN FOC Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_FOC_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN FOC Request Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Promotion_Request</fullName>
        <active>true</active>
        <label>ASI CRM VN Promotion Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Promotion_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Promotion Request Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GiftBox_VN_Request</fullName>
        <active>true</active>
        <label>ASI GiftBox VN Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GiftBox_VN_Request_Read_Only</fullName>
        <active>true</active>
        <label>ASI GiftBox VN Request Read-Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_GiftBox_VN_Request_Approver__c</fullName>
        <label>Gift Box Request Approver</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckOrderDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
OR(
RecordType.DeveloperName == &apos;ASI_CRM_VN_FOC_Request&apos;,
RecordType.DeveloperName == &apos;ASI_CRM_POSM_VN_Request&apos;,
RecordType.DeveloperName == &apos;ASI_CRM_VN_Display_Listing_Fee_Request&apos;,
RecordType.DeveloperName == &apos;ASI_CRM_VN_Promotion_Request&apos;,
RecordType.DeveloperName == &apos;ASI_CRM_VN_CS_Request&apos;,
RecordType.DeveloperName == &apos;ASI_CRM_VN_Capsule_CS_Request&apos;
),
OR(
ASI_CRM_Order_Date__c &gt; ASI_CRM_VN_Contract__r.ASI_CRM_Valid_Claim_Date__c,
ASI_CRM_Order_Date__c &lt; ASI_CRM_VN_Contract_Start_Date__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Order_Date__c</errorDisplayField>
        <errorMessage>Order Date inputted must not be back-date, and must not exceed the MCF valid claim date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckPromotionPlanBalance</fullName>
        <active>true</active>
        <description>Promotion Plan Balance &gt; 0</description>
        <errorConditionFormula>IF( 
ISNULL(ASI_CRM_Trade_A_P_Plan__c ), 
false, 
AND(
ASI_CRM_Trade_A_P_Plan__r.ASI_CRM_Balance_Amount__c &lt;= 0, 
RecordType.DeveloperName == &apos;ASI_CRM_VN_Promotion_Request&apos;
)
)</errorConditionFormula>
        <errorMessage>Promotion Plan Balance must greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckPromotionPlanDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ASI_CRM_Trade_A_P_Plan__r.ASI_CRM_End_Date__c &lt;  ASI_CRM_Order_Date__c, 
RecordType.DeveloperName == &apos;ASI_CRM_VN_Promotion_Request&apos;
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Order_Date__c</errorDisplayField>
        <errorMessage>Order Date inputted must not exceed the Promotion Plan end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckPromotionPlanItemBalance</fullName>
        <active>true</active>
        <description>At least 1 promotion plan item&apos;s balance &gt; 0.</description>
        <errorConditionFormula>AND( 
ASI_CRM_Trade_A_P_Plan__r.ASI_CRM_Item_Count__c &gt; 0,
ASI_CRM_Trade_A_P_Plan__r.ASI_CRM_Item_Balance_Sum__c &lt;= 0, 
RecordType.DeveloperName == &apos;ASI_CRM_VN_Promotion_Request&apos; 
)</errorConditionFormula>
        <errorMessage>Promotion plan items have no balance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckReceiverInformation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
RecordType.DeveloperName == &apos;ASI_CRM_VN_CS_Request&apos;,
RecordType.DeveloperName == &apos;ASI_CRM_VN_Capsule_CS_Request&apos;
),
OR(
AND(
ASI_CRM_VN_Cash__c == false,
ASI_CRM_VN_Bank__c == false
),
AND(
ASI_CRM_VN_Cash__c == true,
ASI_CRM_VN_Bank__c == true
),
AND(
ASI_CRM_VN_Cash__c == true,
OR(
ISBLANK(ASI_CRM_VN_Cash_Payee_Name__c),
ISBLANK(ASI_CRM_VN_Cash_Payee_ID_Passport__c),
ISBLANK(ASI_CRM_VN_Cash_Payee_Contact__c) 
)
),
AND(
ASI_CRM_VN_Bank__c == true,
OR(
ISBLANK(ASI_CRM_VN_Bank_Payee_Name__c),
ISBLANK(ASI_CRM_VN_Bank_Payee_AC__c),
ISBLANK(ASI_CRM_VN_Bank_Payee_Bank_Name__c),
ISBLANK(ASI_CRM_VN_Bank_Payee_Branch__c)
)
)
)
)</errorConditionFormula>
        <errorMessage>Please input correct receiver information</errorMessage>
    </validationRules>
</CustomObject>